--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,3 +1,8 @@
+---
+layout: default
+archives: 'archives.html'
+---
+
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
