--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,3 @@
----
-layout: default
-archives: 'archives.html'
----
-
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
@@ -32,7 +27,7 @@ archives: 'archives.html'
       {% endfor %}
 
       <li class="sidebar-nav-item"><a href="{{ site.emailme }}">Contact Me</a></li>
-      <li class="sidebar-nav-item"><a href="{{ site.baseurl }}{{ page.archives }}">Posts Archives</a></li>
+      <li class="sidebar-nav-item"><a href="{{ site.baseurl }}/archives">Posts Archives</a></li>
     
             <!-- social buttons -->
       {% if site.github_username %}
