--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
       {% endfor %}
 
       <li class="sidebar-nav-item"><a href="{{ site.emailme }}">Contact Me</a></li>
-      <li class="sidebar-nav-item"><a href="{{ site.baseurl }}/archives">Posts Archives</a></li>
+      <li class="sidebar-nav-item"><a href="{{ site.baseurl }}/archives/">Posts Archives</a></li>
     
             <!-- social buttons -->
       {% if site.github_username %}
