--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,9 +35,9 @@
         <i class="fa fa-fw fa-github"></i>
       </a>
       {% endif %}
-      {% if site.facebook_username %}
-      <a href="https://www.facebook.com/{{ site.facebook_username }}" target="_blank" style="text-decoration:none">
-        <i class="fa fa-fw fa-facebook"></i>
+      {% if site.twitter_username %}
+      <a href="https://www.twitter.com/{{ site.twitter_username }}" target="_blank" style="text-decoration:none">
+        <i class="fa fa-fw fa-twitter"></i>
       </a>
       {% endif %}
       {% if site.linkedin_username %}
