--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,14 @@ layout: default
   {{ content }}
 </div>
 
+<footer class="post-footer">
+             <section class="share">
+                <h5>分享|Share</h5>
+                <a class="icon-twitter" href="https://twitter.com/intent/tweet?text=&quot;{{ page.title }}&quot;%20{{ site.url }}{{ page.url }}%20via%20&#64;princeliebe">
+                    <span class="hidden">Twitter</span>
+                </a>
+            </section>   	
+        </footer>
 
 <div class="related">
   <h2>Related Posts</h2>
