--- a/_includes/music.html
+++ b/_includes/music.html
@@ -1,1 +1,3 @@
-<iframe frameborder="no" marginwidth="0" marginheight="0" width=400 height=140 src="https://music.163.com/outchain/player?type=2&id={{ include.id }}&auto=0&height=66"></iframe>
+<DIV>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id={{ include.id }}&auto=0&height=66"></iframe>
+</DIV>
