--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="https://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
+<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
 
   {% include head.html %}
 
