--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
 
 {% if page.lang %}
 <div class="post" lang="{{page.lang}}">
