--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="/feed.xml">
 
 <div class="post">
 <h1 class="tag-title">Tag: {{ page.tag }}</h1>
